tests/parser/syntax-errors/expected-expr/expected_expr_index_expr_2d.choc
# RUN: choco-opt "%s" | filecheck "%s"

a[1][]

# CHECK:      SyntaxError (line 3, column 6): Expected expression.
# CHECK-NEXT: >>>a[1][]
# CHECK-NEXT: >>>-----^
